# pigz

./: .gitignore  .gitmodules  Makefile.am  README  README-hacking  bootstrap.conf  configure.ac  performance  pigz.c
lib/: .gitignore  try.c  try.h  yarn.c  yarn.h
lib/zlib/: gzguts.h
lib/zopfli/: blocksplitter.c  cache.c  squeeze.h  tree.h
src/: gzip.1  gzip.c  pigz.1  pigz.c  util.c
tests/: Makefile.am  backcomp  backcomp-segv  helin-segv  help-version  hufts  keep  list  memcpy-abuse  mixed  null-suffix-clobber  performance  reproducible  signal  signal-test  stdin  timestamp  trailing-nul  unpack  unpack-invalid  unpack-valid  upper-suffix  z-suffix
